<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textoBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding_top_texto_superior"
        android:text="@string/mensaje_bienvenida"
        android:textColor="@android:color/white"
        android:textSize="@dimen/size_texto_grande" />

    <EditText
        android:id="@+id/login_campo_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textoBienvenida"
        android:layout_alignStart="@+id/textoBienvenida"
        android:layout_alignLeft="@+id/textoBienvenida"
        android:layout_alignEnd="@+id/textoBienvenida"
        android:layout_alignRight="@+id/textoBienvenida"
        android:layout_marginTop="39dp"
        android:hint="@string/hint_nombre"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/login_campo_cedula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_campo_nombre"
        android:layout_alignStart="@+id/login_campo_nombre"
        android:layout_alignLeft="@+id/login_campo_nombre"
        android:layout_alignEnd="@+id/login_campo_nombre"
        android:layout_alignRight="@+id/login_campo_nombre"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/hint_cedula"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_campo_cedula"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_campo_cedula"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/boton_ingresar"
            android:layout_width="@dimen/ficha_ancho_botones"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/login_botones"
            android:layout_weight="50"
            android:gravity="center"
            android:text="Ingresar" />

        <Button
            android:id="@+id/boton_nuevo"
            android:layout_width="@dimen/ficha_ancho_botones"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/login_botones"
            android:layout_weight="50"
            android:gravity="center"
            android:text="Nuevo" />
    </LinearLayout>


</RelativeLayout>